# capi

./: .gitignore  README.md  TODO.md  asd.py  config.yaml  db.py  db_er.py  erudantic.py  makefile  mermaid.md  pyproject.toml
.archive/: PROJECT.md
.archive/local_dbs/: manually.json  tasks.json  tiny_db.json
.archive/playground/: page.html
.archive/src/: checklist.py
ci/development/: docker-compose.yml  dockerfile  zsh_config.sh
cuak/: PROJECTS.md
cuak/loa_chars/: loa_chars.py
dev_configs/: .bandit  .flake8  .isort.cfg  .pylintrc
doc/: mkdocs.yml
doc/docs/: index.md
doc/docs/donkey_guides/: fastapi.md  http.md
domains/: base.py  character.py  content.py
local_dbs/: old_tiny_db.json  tiny_db.json
playground/: datos.json
src/: __init__.py  __main__.py  conteiners.py  fake_db.py
src/domain/: playground.py
src/gateway/: __init__.py  exceptions.py  middlewares.py
src/gateway/api/: __init__.py  accounts.py  checklist.py  connectivity.py  crud.py  playground.py  users.py
src/gateway/examples/: api_endpoints.py  objects.py
src/gateway/schemas/: __init__.py  accounts.py  connectivity.py  contents.py  users.py
src/infrastructure/: __init__.py  account.py  character.py  rooster.py  server.py  tasks.py  user.py
src/utils/: api_generic_struct.py  context.py  development.py  lifespan.py  logging.py
