[tool.poetry]
name = "src"
version = "0.1.0"
description = "CAPI - The Character API"
authors = [
    "Ángel Felipe Santaliestra Pasías <afsantaliestra@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
dependency-injector = "^4.41.0"
toml = "^0.10.2"
gunicorn = "^21.2.0"
hypercorn = {extras = ["h2"], version = "^0.15.0"}
beanie = "^1.25.0"
python-json-logger = "^2.0.7"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pylint = "^3.0.3"
bandit = "^1.7.6"
flake8 = "^6.1.0"
mypy = "^1.8.0"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
